src/grammar/.antlr/TyCParser.py
# Generated from c:/Users/USER/OneDrive/my files/Year 3/Sem 2/PPL/Assignment/tyc-compiler/src/grammar/TyC.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class TyCParser ( Parser ):

    grammarFileName = "TyC.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "'auto'", "'break'", 
                     "'case'", "'continue'", "'default'", "'else'", "'float'", 
                     "'for'", "'if'", "'int'", "'return'", "'string'", "'struct'", 
                     "'switch'", "'void'", "'while'", "<INVALID>", "'++'", 
                     "'--'", "'+'", "'-'", "'*'", "'/'", "'%'", "'=='", 
                     "'!='", "'<='", "'>='", "'<'", "'>'", "'||'", "'&&'", 
                     "'!'", "'='", "'.'", "'['", "']'", "'{'", "'}'", "'('", 
                     "')'", "';'", "','", "':'" ]

    symbolicNames = [ "<INVALID>", "BLOCK_CMT", "LINE_CMT", "AUTO", "BREAK", 
                      "CASE", "CONTINUE", "DEFAULT", "ELSE", "FLOAT", "FOR", 
                      "IF", "INT", "RETURN", "STRING", "STRUCT", "SWITCH", 
                      "VOID", "WHILE", "ID", "INC", "DEC", "PLUS", "MINUS", 
                      "MUL", "DIV", "MOD", "EQ", "NEQ", "LE", "GE", "LT", 
                      "GT", "OR", "AND", "NOT", "ASSIGN", "DOT", "LBRACK", 
                      "RBRACK", "LBRACE", "RBRACE", "LPAREN", "RPAREN", 
                      "SEMI", "COMMA", "COLON", "INT_LIT", "FLOAT_LIT", 
                      "STRING_LIT", "WS", "ERROR_CHAR", "ILLEGAL_ESCAPE", 
                      "UNCLOSE_STRING" ]

    RULE_program = 0
    RULE_voidFuncDecl = 1
    RULE_funcDecl = 2
    RULE_paramList = 3
    RULE_param = 4
    RULE_type = 5
    RULE_structDecl = 6
    RULE_structMemberDecl = 7
    RULE_varDecl = 8
    RULE_exprStmt = 9
    RULE_exprList = 10
    RULE_expr = 11
    RULE_assignExpr = 12
    RULE_lvalue = 13
    RULE_logicalOr = 14
    RULE_logicalAnd = 15
    RULE_equality = 16
    RULE_relational = 17
    RULE_additive = 18
    RULE_multiplicative = 19
    RULE_unary = 20
    RULE_postfix = 21
    RULE_primary = 22
    RULE_postfixOp = 23
    RULE_ifStmt = 24
    RULE_whileStmt = 25
    RULE_forStmt = 26
    RULE_forInit = 27
    RULE_forCond = 28
    RULE_forUpdate = 29
    RULE_varDeclNoSemi = 30
    RULE_structInitNoSemi = 31
    RULE_initElem = 32
    RULE_initList = 33
    RULE_structLit = 34
    RULE_switchStmt = 35
    RULE_switchSection = 36
    RULE_caseSection = 37
    RULE_defaultSection = 38
    RULE_caseLabel = 39
    RULE_continueStmt = 40
    RULE_breakStmt = 41
    RULE_returnStmt = 42
    RULE_stmt = 43
    RULE_blockStmt = 44

    ruleNames =  [ "program", "voidFuncDecl", "funcDecl", "paramList", "param", 
                   "type", "structDecl", "structMemberDecl", "varDecl", 
                   "exprStmt", "exprList", "expr", "assignExpr", "lvalue", 
                   "logicalOr", "logicalAnd", "equality", "relational", 
                   "additive", "multiplicative", "unary", "postfix", "primary", 
                   "postfixOp", "ifStmt", "whileStmt", "forStmt", "forInit", 
                   "forCond", "forUpdate", "varDeclNoSemi", "structInitNoSemi", 
                   "initElem", "initList", "structLit", "switchStmt", "switchSection", 
                   "caseSection", "defaultSection", "caseLabel", "continueStmt", 
                   "breakStmt", "returnStmt", "stmt", "blockStmt" ]

    EOF = Token.EOF
    BLOCK_CMT=1
    LINE_CMT=2
    AUTO=3
    BREAK=4
    CASE=5
    CONTINUE=6
    DEFAULT=7
    ELSE=8
    FLOAT=9
    FOR=10
    IF=11
    INT=12
    RETURN=13
    STRING=14
    STRUCT=15
    SWITCH=16
    VOID=17
    WHILE=18
    ID=19
    INC=20
    DEC=21
    PLUS=22
    MINUS=23
    MUL=24
    DIV=25
    MOD=26
    EQ=27
    NEQ=28
    LE=29
    GE=30
    LT=31
    GT=32
    OR=33
    AND=34
    NOT=35
    ASSIGN=36
    DOT=37
    LBRACK=38
    RBRACK=39
    LBRACE=40
    RBRACE=41
    LPAREN=42
    RPAREN=43
    SEMI=44
    COMMA=45
    COLON=46
    INT_LIT=47
    FLOAT_LIT=48
    STRING_LIT=49
    WS=50
    ERROR_CHAR=51
    ILLEGAL_ESCAPE=52
    UNCLOSE_STRING=53

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(TyCParser.EOF, 0)

        def funcDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TyCParser.FuncDeclContext)
            else:
                return self.getTypedRuleContext(TyCParser.FuncDeclContext,i)


        def voidFuncDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TyCParser.VoidFuncDeclContext)
            else:
                return self.getTypedRuleContext(TyCParser.VoidFuncDeclContext,i)


        def structDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TyCParser.StructDeclContext)
            else:
                return self.getTypedRuleContext(TyCParser.StructDeclContext,i)


        def getRuleIndex(self):
            return TyCParser.RULE_program




    def program(self):

        localctx = TyCParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 709120) != 0):
                self.state = 93
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [9, 12, 14, 19]:
                    self.state = 90
                    self.funcDecl()
                    pass
                elif token in [17]:
                    self.state = 91
                    self.voidFuncDecl()
                    pass
                elif token in [15]:
                    self.state = 92
                    self.structDecl()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 97
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 98
            self.match(TyCParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VoidFuncDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VOID(self):
            return self.getToken(TyCParser.VOID, 0)

        def ID(self):
            return self.getToken(TyCParser.ID, 0)

        def LPAREN(self):
            return self.getToken(TyCParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(TyCParser.RPAREN, 0)

        def blockStmt(self):
            return self.getTypedRuleContext(TyCParser.BlockStmtContext,0)


        def paramList(self):
            return self.getTypedRuleContext(TyCParser.ParamListContext,0)


        def getRuleIndex(self):
            return TyCParser.RULE_voidFuncDecl




    def voidFuncDecl(self):

        localctx = TyCParser.VoidFuncDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_voidFuncDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.match(TyCParser.VOID)
            self.state = 101
            self.match(TyCParser.ID)
            self.state = 102
            self.match(TyCParser.LPAREN)
            self.state = 104
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 545280) != 0):
                self.state = 103
                self.paramList()


            self.state = 106
            self.match(TyCParser.RPAREN)
            self.state = 107
            self.blockStmt()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(TyCParser.ID, 0)

        def LPAREN(self):
            return self.getToken(TyCParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(TyCParser.RPAREN, 0)

        def blockStmt(self):
            return self.getTypedRuleContext(TyCParser.BlockStmtContext,0)


        def type_(self):
            return self.getTypedRuleContext(TyCParser.TypeContext,0)


        def paramList(self):
            return self.getTypedRuleContext(TyCParser.ParamListContext,0)


        def getRuleIndex(self):
            return TyCParser.RULE_funcDecl




    def funcDecl(self):

        localctx = TyCParser.FuncDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_funcDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.state = 109
                self.type_()


            self.state = 112
            self.match(TyCParser.ID)
            self.state = 113
            self.match(TyCParser.LPAREN)
            self.state = 115
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 545280) != 0):
                self.state = 114
                self.paramList()


            self.state = 117
            self.match(TyCParser.RPAREN)
            self.state = 118
            self.blockStmt()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TyCParser.ParamContext)
            else:
                return self.getTypedRuleContext(TyCParser.ParamContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(TyCParser.COMMA)
            else:
                return self.getToken(TyCParser.COMMA, i)

        def getRuleIndex(self):
            return TyCParser.RULE_paramList




    def paramList(self):

        localctx = TyCParser.ParamListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_paramList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self.param()
            self.state = 125
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==45:
                self.state = 121
                self.match(TyCParser.COMMA)
                self.state = 122
                self.param()
                self.state = 127
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(TyCParser.TypeContext,0)


        def ID(self):
            return self.getToken(TyCParser.ID, 0)

        def getRuleIndex(self):
            return TyCParser.RULE_param




    def param(self):

        localctx = TyCParser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_param)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            self.type_()
            self.state = 129
            self.match(TyCParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(TyCParser.INT, 0)

        def FLOAT(self):
            return self.getToken(TyCParser.FLOAT, 0)

        def STRING(self):
            return self.getToken(TyCParser.STRING, 0)

        def ID(self):
            return self.getToken(TyCParser.ID, 0)

        def getRuleIndex(self):
            return TyCParser.RULE_type




    def type_(self):

        localctx = TyCParser.TypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 545280) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StructDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRUCT(self):
            return self.getToken(TyCParser.STRUCT, 0)

        def ID(self):
            return self.getToken(TyCParser.ID, 0)

        def LBRACE(self):
            return self.getToken(TyCParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(TyCParser.RBRACE, 0)

        def SEMI(self):
            return self.getToken(TyCParser.SEMI, 0)

        def structMemberDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TyCParser.StructMemberDeclContext)
            else:
                return self.getTypedRuleContext(TyCParser.StructMemberDeclContext,i)


        def getRuleIndex(self):
            return TyCParser.RULE_structDecl




    def structDecl(self):

        localctx = TyCParser.StructDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_structDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 133
            self.match(TyCParser.STRUCT)
            self.state = 134
            self.match(TyCParser.ID)
            self.state = 135
            self.match(TyCParser.LBRACE)
            self.state = 139
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 545280) != 0):
                self.state = 136
                self.structMemberDecl()
                self.state = 141
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 142
            self.match(TyCParser.RBRACE)
            self.state = 143
            self.match(TyCParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StructMemberDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(TyCParser.TypeContext,0)


        def ID(self):
            return self.getToken(TyCParser.ID, 0)

        def SEMI(self):
            return self.getToken(TyCParser.SEMI, 0)

        def getRuleIndex(self):
            return TyCParser.RULE_structMemberDecl




    def structMemberDecl(self):

        localctx = TyCParser.StructMemberDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_structMemberDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 145
            self.type_()
            self.state = 146
            self.match(TyCParser.ID)
            self.state = 147
            self.match(TyCParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varDeclNoSemi(self):
            return self.getTypedRuleContext(TyCParser.VarDeclNoSemiContext,0)


        def SEMI(self):
            return self.getToken(TyCParser.SEMI, 0)

        def getRuleIndex(self):
            return TyCParser.RULE_varDecl




    def varDecl(self):

        localctx = TyCParser.VarDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_varDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 149
            self.varDeclNoSemi()
            self.state = 150
            self.match(TyCParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(TyCParser.ExprContext,0)


        def SEMI(self):
            return self.getToken(TyCParser.SEMI, 0)

        def getRuleIndex(self):
            return TyCParser.RULE_exprStmt




    def exprStmt(self):

        localctx = TyCParser.ExprStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_exprStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 152
            self.expr()
            self.state = 153
            self.match(TyCParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TyCParser.ExprContext)
            else:
                return self.getTypedRuleContext(TyCParser.ExprContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(TyCParser.COMMA)
            else:
                return self.getToken(TyCParser.COMMA, i)

        def getRuleIndex(self):
            return TyCParser.RULE_exprList




    def exprList(self):

        localctx = TyCParser.ExprListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_exprList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 155
            self.expr()
            self.state = 160
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==45:
                self.state = 156
                self.match(TyCParser.COMMA)
                self.state = 157
                self.expr()
                self.state = 162
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignExpr(self):
            return self.getTypedRuleContext(TyCParser.AssignExprContext,0)


        def getRuleIndex(self):
            return TyCParser.RULE_expr




    def expr(self):

        localctx = TyCParser.ExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_expr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 163
            self.assignExpr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def logicalOr(self):
            return self.getTypedRuleContext(TyCParser.LogicalOrContext,0)


        def lvalue(self):
            return self.getTypedRuleContext(TyCParser.LvalueContext,0)


        def ASSIGN(self):
            return self.getToken(TyCParser.ASSIGN, 0)

        def assignExpr(self):
            return self.getTypedRuleContext(TyCParser.AssignExprContext,0)


        def getRuleIndex(self):
            return TyCParser.RULE_assignExpr




    def assignExpr(self):

        localctx = TyCParser.AssignExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_assignExpr)
        try:
            self.state = 170
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 165
                self.logicalOr()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 166
                self.lvalue()
                self.state = 167
                self.match(TyCParser.ASSIGN)
                self.state = 168
                self.assignExpr()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LvalueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(TyCParser.ID)
            else:
                return self.getToken(TyCParser.ID, i)

        def DOT(self, i:int=None):
            if i is None:
                return self.getTokens(TyCParser.DOT)
            else:
                return self.getToken(TyCParser.DOT, i)

        def getRuleIndex(self):
            return TyCParser.RULE_lvalue




    def lvalue(self):

        localctx = TyCParser.LvalueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_lvalue)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 172
            self.match(TyCParser.ID)
            self.state = 177
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==37:
                self.state = 173
                self.match(TyCParser.DOT)
                self.state = 174
                self.match(TyCParser.ID)
                self.state = 179
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LogicalOrContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def logicalAnd(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TyCParser.LogicalAndContext)
            else:
                return self.getTypedRuleContext(TyCParser.LogicalAndContext,i)


        def OR(self, i:int=None):
            if i is None:
                return self.getTokens(TyCParser.OR)
            else:
                return self.getToken(TyCParser.OR, i)

        def getRuleIndex(self):
            return TyCParser.RULE_logicalOr




    def logicalOr(self):

        localctx = TyCParser.LogicalOrContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_logicalOr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 180
            self.logicalAnd()
            self.state = 185
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==33:
                self.state = 181
                self.match(TyCParser.OR)
                self.state = 182
                self.logicalAnd()
                self.state = 187
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LogicalAndContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def equality(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TyCParser.EqualityContext)
            else:
                return self.getTypedRuleContext(TyCParser.EqualityContext,i)


        def AND(self, i:int=None):
            if i is None:
                return self.getTokens(TyCParser.AND)
            else:
                return self.getToken(TyCParser.AND, i)

        def getRuleIndex(self):
            return TyCParser.RULE_logicalAnd




    def logicalAnd(self):

        localctx = TyCParser.LogicalAndContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_logicalAnd)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 188
            self.equality()
            self.state = 193
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==34:
                self.state = 189
                self.match(TyCParser.AND)
                self.state = 190
                self.equality()
                self.state = 195
                self._errHandler.sync(self)
                _la = self._input.LA(1)
